[project]
name = "stepbytep"
version = "0.1.0"
description = "stepbytep using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
stepbytep = "stepbytep.main:run"
run_crew = "stepbytep.main:run"
train = "stepbytep.main:train"
replay = "stepbytep.main:replay"
test = "stepbytep.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
